Invalidate scrolling contents layer on background invalidations painted into it.

When we paint backgrounds into the scrolling contents layer we need to invalidate
appropriately when those backgrounds change.

BUG=636437
TEST=compositing/overflow/overflow-scroll-with-local-background-invalidation.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2235873002
Cr-Commit-Position: refs/heads/master@{#411441}

Former-commit-id: c01760bc132fcc6a8d96b1d567bad36a6614677f